# pycluster

./: .gitignore  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build.yml
examples/: basic_test.py
pycluster/: __init__.py  cli.py  config.py  decorators.py
pycluster/core/: __init__.py  host.py  worker.py
pycluster/network/: __init__.py  encryption.py  file_transfer.py  socket_manager.py
pycluster/utils/: __init__.py  helpers.py
tests/: __init__.py  test_basic.py
